Minor refactor: Move geometry computation logic from inside Region class to HyperRect extension class.

--- a/SpaceSegmentation/SpaceSegmentation.vcxproj
+++ b/SpaceSegmentation/SpaceSegmentation.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="HyperRect.h" />
+    <ClInclude Include="HyperRectExtensions.h" />
     <ClInclude Include="Region.h" />
     <ClInclude Include="RegionSegmentation.h" />
     <ClInclude Include="RegionType.h" />
